# QModel-Demo

./: .gitignore  AGENTS.md  MANIFEST.in  OFFLOAD.md  README.md  awq_example.py  awq_usage.py  backend_example.py  basic_usage.py  chat_example.py  chat_fp_example.py  evaplus_nanomodel.py  generation_speed.py  gptq_example.py  gptq_quant_example.py  inference_example.py  inference_with_backend.py  model_eval.py  pyproject.toml  requirements.txt  setup.py  test_inference_speed.py  test_tokenizer.py  wikitext2_example.py
ChatCIL/: chat_example.py  chat_fp_example.py
benchmark/evaluation/: acc_model_eval.py  evaplus_nanomodel.py  wikitext2_ppl.py
benchmark/inference_speed.py/: generation_speed.py  generation_speed_args.py
chat_test/: chat_example.py  chat_fp_example.py
example/: basic_usage.py  basic_usage_wikitext2.py  transformers_usage.py
example/benchmark/: generation_speed.py  wikitext2_example.py
example/data/: c4_sample_calibration.jsonl
example/inference/: backend_example.py
example/quantization/: awq_example.py  gptq_example.py
nanomodel/: __init__.py  version.py
nanomodel/looper/: awq_processor.py  dequantize_processor.py  gptq_processor.py  loop_processor.py  module_looper.py  native_processor.py  tensorparallel_weight_processor.py
nanomodel/models/: __init__.py  _const.py  auto.py  base.py  loader.py  writer.py
nanomodel/models/definitions/: __init__.py  llama.py  qwen2.py  qwen3.py
nanomodel/nn_modules/: hooked_linear.py
nanomodel/nn_modules/qlinear/: __init__.py  awq_gemm.py  awq_gemv.py  awq_gemv_fast.py  awq_marlin.py  lookahead.py  marlin.py  pack_block_ext.py  torch.py  triton.py  tritonv2.py
nanomodel/nn_modules/triton/: dequant.py  kernels.py
nanomodel/nn_modules/triton_utils/: custom_autotune.py  dequant.py  kernels.py
nanomodel/processors/: awq_processor.py  base_processor.py  dequantize_processor.py  gptq_processor.py  module_processor.py  named_module.py  tensorparallel_weight_processor.py
nanomodel/quantization/: __init__.py  config.py  gar.py  gptq.py  quantizer.py
nanomodel/quantization/awq/modules/linear/: __init__.py  gemm.py  gemv.py  gemv_fast.py  marlin.py
nanomodel/quantization/awq/modules/triton/: gemm.py
nanomodel/quantization/awq/quantize/: scale.py
nanomodel/quantization/awq/utils/: module.py  packing_utils.py  utils.py
nanomodel/quantization/rotation/: hadamard_utils.py  rotation.py
nanomodel/utils/: __init__.py  _extension_loader.py  attn_mask.py  backend.py  calibration.py  cpp.py  ctx.py  cuda_activation_buffer.py  data.py  device.py  env.py  eval.py  evalplus.py  hf.py  image.py  importer.py  linalg_warmup.py  logger.py  looper_helpers.py  marlin.py  marlin_scalar_type.py  memory.py  mlx.py  mmlupro.py  model.py  monitor.py  offload.py  openai_server.py  perplexity.py  processor_helpers.py  python.py  rocm.py  safe.py  sglang.py  structure.py  tensor.py  terminal.py  threads.py  threadx.py  torch.py  (+1 more)
nanomodel_ext/: __init__.py  pack_block_cpu.cpp
nanomodel_ext/marlin/: generate_kernels.py  gptq_marlin.cu  kernel.h  marlin_cuda.cpp  marlin_template.h
