[build-system]
requires = [
    "setuptools>=80.9",
    "ninja>=1.13.0",
]

build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "NanoModel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ 
    "numpy==2.2.6",
    "torch>=2.8.0",
    "accelerate>=1.10.1",
    "safetensors>=0.6.2",
    "transformers>=4.57.1",
    "threadpoolctl>=3.6.0",
    "packaging>=24.2",
    "protobuf>=6.32.0",
    "pillow>=11.3.0",
    "hf_transfer>=0.1.9",
    "huggingface_hub>=0.34.4",
    "maturin>=1.9.4",
    "datasets>=3.6.0",
    "pyarrow>=21.0",
    "dill>=0.3.8",
    # "flash-attn>=2.8.3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
    "pytest-timeout>=2.3.1",
    "parameterized",
]
quality = [
    "ruff==0.13.0",
    # "isort==6.0.1",
]
vllm = [
    "vllm>=0.10.2",
    "flashinfer-python>=0.3.1",
]
sglang = [
    "sglang[srt]>=0.4.6",
    "flashinfer-python>=0.3.1",
]
bitblas = [
    "bitblas==0.1.0.post1",
]
hf = [
    "optimum>=1.21.2",
]
eval = [
    "lm_eval>=0.4.7",
    "evalplus>=0.3.1",
]
triton = [
    "triton>=3.4.0",
]
openai = [
    "uvicorn",
    "fastapi",
    "pydantic",
]
mlx = [
    "mlx_lm>=0.24.0",
]
